developerProject/force-app/main/default/objects/OJ_PM__Swap_Rate__c/OJ_PM__Swap_Rate__c.object-meta.xml
<CustomObject>
    <label>Swap Rate</label>
    <nameField>
        <label>Swap Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swap Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>