developerProject/force-app/main/default/objects/OJ_PM__Swap_Rate__c/fields/OJ_PM__Swap_Rate__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Swap_Rate__c</fullName>
    <label>Swap Rate</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>