developerProject/force-app/main/default/objects/OJ_PM__Swap_Rate__c/fields/OJ_PM__Term__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Term__c</fullName>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>